# deidentify_screen_capture

./: .gitignore  AGENTS.md  README.md  deidentify_subtitles.py  main.py  print_text_blocks.py  process_study_videos.py  pyproject.toml  remove_text_from_image.py  remove_text_from_video.py  test_text_removal.py  text_removal_helper.py
