[project]
name = "text-removal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.51.0",
    "opencv-python>=4.12.0.88",
    "pytesseract>=0.3.1",
    "pandas>=3.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
